# eraowl-ui-engine

./: .env.docker.example  .gitignore  AGENTS.md  GLOBAL_DESIGN.md  Implement-V1.0.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
eraowl-ui-engine-api/: .dockerignore  .env.example  .gitignore  Dockerfile  dbmate.yml  docker-compose.yml  pyproject.toml
eraowl-ui-engine-api/app/: main.py
eraowl-ui-engine-api/app/core/: config.py  db.py  security.py  telemetry.py
eraowl-ui-engine-api/app/modules/ui_designer/: models.py  router.py  schemas.py  service.py
eraowl-ui-engine-api/app/modules/ui_designer/ai/: orchestrator.py  router.py
eraowl-ui-engine-api/app/modules/ui_designer/codegen/: config.py  decompiler.py  diff_builder.py  generator.py  router.py  scanner.py  (+1 more)
eraowl-ui-engine-api/app/schema_validation/: layout_schema_v1.json  theme_schema_v1.json  validator.py
eraowl-ui-engine-api/app/shared/: base_crud.py  exceptions.py  rate_limiter.py
eraowl-ui-engine-api/db/: schema.sql
eraowl-ui-engine-api/db/migrations/: 20260101000000_init_ui_designer_schema.sql  20260102000000_add_codegen_targets.sql  20260102000000_reconcile_schema.sql  20260103000000_page_owner_scoping.sql
eraowl-ui-engine-api/tests/integration/: test_ai_endpoint_validation.py  test_codegen_sandbox.py  test_pages_api.py
eraowl-ui-engine-api/tests/unit/: test_codegen_generator.py  test_component_registry.py  test_decompiler.py  test_layout_schema_validation.py  test_owner_scoping.py  test_project_scanner.py  test_resolver_registry.py  test_theme_schema_validation.py
(+217 files in other folders)
