[project]
name = "eraowl-ui-engine-api"
version = "0.1.0"
description = "EraOwl UI Engine — Low-code Render Engine API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.10.0",
    "sqlmodel>=0.0.24",
    "asyncpg>=0.30.0",
    "redis>=7.0.0",
    "jsonschema>=4.23.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]
codegen = [
    "ts-morph>=22.0.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "app.modules.ui_designer.codegen.*"
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
